fixed nav bar spillage

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -1,6 +1,7 @@
 nav {
 	background: $navbar;
 	height: 67px;
+	overflow: hidden;
 }
 .beniz {
 	display:none;
